--- a/app/views/quicksetup.scala.html
+++ b/app/views/quicksetup.scala.html
@@ -48,6 +48,7 @@
                             switch (jqXHR.status) {
                                 case 409:
                                     flashError(jqXHR.responseText);
+                                    identifier.focus();
                                     break;
                                 case 200:
                                     flashError("Expected JSON in response, got 200 but not JSON");
@@ -63,6 +64,9 @@
                 flashHide();
                 $('#url').text(urlRoot + identifier.val());
             });
+            identifier.focus(function() {
+                identifier.select();
+            })
         }
 
         initialise();
