--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,7 +2,7 @@
 
     <div class="hero-unit">
         <h1>Meeting room booking</h1>
-        <p>No registration required, simply set up your rooms, send out the link to your team and you are ready to go.</p>
+        <p>No registration required, simply set up your rooms and go</p>
         <p> <a href="/quicksetup" class="btn btn-primary btn-large"> Get started &raquo; </a> </p>
     </div>
 
