--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
     <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("jquery-ui/jquery-ui-1.10.2/ui/minified/jquery-ui.min.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")" />
     <style type="text/css">
@@ -16,6 +17,7 @@
             padding-bottom: 40px;
             }
     </style>
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("jquery-ui/jquery-ui-1.10.2/themes/base/minified/jquery-ui.min.css")" />
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("bootstrap/css/bootstrap-responsive.min.css")" />
     @scripts
 </head>
@@ -28,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="brand" href="/"> MRB </a>
+                <a class="brand" href="/"> Rooms </a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         <li class="active"> <a href="/"> Home </a> </li>
