--- a/app/views/quicksetup.scala.html
+++ b/app/views/quicksetup.scala.html
@@ -1,4 +1,6 @@
 @scripts = {
+<link href="@routes.Assets.at("jtable/jtable.2.3.0/themes/jqueryui/jtable_jqueryui.min.css")" rel="stylesheet" type="text/css" />
+<script src="@routes.Assets.at("jtable/jtable.2.3.0/jquery.jtable.min.js")" type="text/javascript"></script>
 <script type="text/javascript">
     $(function () {
         var urlRoot = 'http://www.somedomain.com/';
@@ -73,6 +75,29 @@
     });
 
 </script>
+<script type="text/javascript">
+    $(function () {
+        $('#roomTableContainer').jtable({
+            title: '<h1>Rooms</h1>',
+            actions: {
+                listAction: '/rooms/list',
+                createAction: '/rooms/create',
+                updateAction: '/rooms/update',
+                deleteAction: '/rooms/delete'
+            },
+            fields: {
+                id: {
+                    key: true,
+                    list: false
+                },
+                roomName: {
+                    title: 'Room Name'
+                }
+            }
+        });
+        $('#roomTableContainer').jtable('load');
+    });
+</script>
 }
 
 @main("Quick setup", scripts) {
@@ -82,6 +107,7 @@
     <div class="span6">
         <form id="myForm">
 
+            <h1>Identity</h1>
             <span class="help-block">
                     Please enter an identifier for your organisation of team. This will be used to generate the unique link
                     for your meeting room booking system.
@@ -92,6 +118,7 @@
                 <span id="url" class="add-on">.00</span>
             </div>
 
+            <h1>Rooms</h1>
             <span class="help-block">
                     Please enter the names of your meeting rooms.
             </span>
@@ -112,6 +139,9 @@
 
         <div id="flash" class="alert alert-error fade"></div>
 
+    </div>
+    <div class="span6">
+        <div id="roomTableContainer"></div>
     </div>
 </div>
 }
